--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,35 +1,26 @@
 ---
 import { Icon } from "astro-icon";
-import HeroImage from "~/components/hero-image.astro";
 
 const links = [
   {
-    url: "https://astro.build/",
-    description: "Astro's official website",
-    icon: "mdi:home",
-  },
-  {
-    url: "https://github.com/withastro/astro",
-    description: "Astro on GitHub",
+    url: "https://github.com/kalidao",
+    description: "KALI on GitHub",
     icon: "fa-brands:github-alt",
   },
   {
-    url: "https://astro.build/chat",
-    description: "Astro on Discord",
+    url: "https://discord.com/invite/UKCS9ghzUE",
+    description: "Kali on Discord",
     icon: "fa-brands:discord",
   },
   {
-    url: "https://twitter.com/astrodotbuild",
-    description: "Astro on Twitter",
+    url: "https://twitter.com/_kalidao",
+    description: "Kali on Twitter",
     icon: "fa-brands:twitter",
   },
 ];
 ---
 
 <footer class="relative flex items-center justify-center h-64">
-  <div class="absolute inset-0 overflow-hidden opacity-40">
-    <HeroImage />
-  </div>
   <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-4">
     {
       links.map((link) => (
