--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,11 +1,9 @@
 ---
-import { Icon } from "astro-icon";
 import ThemeSwitcher from "~/components/theme-switcher.astro";
 
 const navItems = [
+  { title: "Products", url: "#products" },
   { title: "Features", url: "#features" },
-  { title: "Compatibility", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
 ];
 ---
 
@@ -14,9 +12,7 @@ const navItems = [
   class="absolute bottom-0 z-10 flex items-center justify-between w-full px-8 py-4 text-white border-b border-transparent"
 >
   <a class="flex items-center gap-3 hover:!text-default" href="#">
-    <h1 class="sr-only">Astro</h1>
-    <Icon name="logomark" class="h-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
+    <h1 class="">Kali</h1>
   </a>
   <div>
     <div class="flex items-center gap-6">
@@ -39,7 +35,7 @@ const navItems = [
         class="btn sm:hidden"
         aria-label="Navigation"
       >
-        <Icon pack="mdi" name="menu" class="h-8" />
+       Open Nav
       </button>
       <ThemeSwitcher />
     </div>
@@ -53,12 +49,9 @@ const navItems = [
               class="btn"
               aria-label="Close navigation"
             >
-              <Icon pack="mdi" name="close" class="h-8" />
+              Close Nav
             </button>
           </header>
-          <div class="flex justify-center">
-            <Icon name="logomark" class="h-16" />
-          </div>
           <nav>
             <ul class="flex flex-col">
               {
