--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,8 +1,6 @@
 ---
 import { generateImage } from "astro-eleventy-img";
-import { Icon } from "astro-icon";
 import Starfield from "~/components/starfield.astro";
-import HeroImage from "~/components/hero-image.astro";
 
 const widths = [450, 800];
 const sizes = "(min-width: 640px) 42vw, 67vw";
@@ -21,36 +19,18 @@ const pngSrcset = png.map(({ srcset }) => srcset).join(",");
 
 <section class="relative h-full bg-black">
   <Starfield />
-  <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-40">
-    <HeroImage />
-  </div>
   <div class="relative grid h-full sm:grid-cols-2 place-items-center">
     <h2
       class="flex flex-col self-end gap-2 sm:gap-4 sm:self-auto sm:justify-self-end"
     >
-      <Icon name="logomark" class="h-24 text-white md:h-32" />
       <div
-        class="font-extrabold tracking-tighter text-center text-8xl gradient-text"
+        class="font-black tracking-wide text-justify text-8xl gradient-text hover:animate-pulse"
       >
-        Build fast
-        <br /> websites,
-        <br /> faster.
+        Internet
+        <br /> Native
+        <br /> Structures.
       </div>
     </h2>
-    <picture
-      class="self-start w-2/3 max-w-3xl sm:w-10/12 sm:self-auto sm:justify-self-start"
-    >
-      <source type="image/avif" srcset={avifSrcset} {sizes} />
-      <source type="image/webp" srcset={webpSrcset} {sizes} />
-      <source type="image/png" srcset={pngSrcset} {sizes} />
-      <img
-        class="object-cover w-full h-full"
-        src={png[0].url}
-        width={png[0].width}
-        height={png[0].height}
-        alt="A floating astronaut in a space suit"
-      />
-    </picture>
   </div>
 </section>
 
