--- a/src/components/starfield.astro
+++ b/src/components/starfield.astro
@@ -3,7 +3,7 @@
 </div>
 
 <script>
-  const COUNT = 800;
+  const COUNT = 10000;
   const SPEED = 0.1;
 
   class Star {
@@ -24,7 +24,7 @@
     update(width: number, height: number, speed: number) {
       this.xPrev = this.x;
       this.yPrev = this.y;
-      this.z += speed * 0.0675;
+      this.z += speed * 0.0775;
       this.x += this.x * (speed * 0.0225) * this.z;
       this.y += this.y * (speed * 0.0225) * this.z;
       if (
@@ -33,8 +33,8 @@
         this.y > height / 2 ||
         this.y < -height / 2
       ) {
-        this.x = Math.random() * width - width / 2;
-        this.y = Math.random() * height - height / 2;
+        this.x = Math.random() * width - width/2;
+        this.y = Math.random() * height - height/2;
         this.xPrev = this.x;
         this.yPrev = this.y;
         this.z = 0;
@@ -91,7 +91,7 @@
       star.draw(ctx);
     }
 
-    ctx.fillRect(-width / 2, -height / 2, width, height);
+    ctx.fillRect(-width / 10, -height / 10, width / 100, height / 100);
     rafId = requestAnimationFrame(frame);
   }
 </script>
