--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
-import Compatibility from "~/components/compatibility.astro";
+import Products from "~/components/products.astro";
 import Features from "~/components/features.astro";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
-import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
 import "~/styles/index.css";
 
@@ -83,9 +82,8 @@ const description =
     <Splash />
     <div class="px-8 py-32 space-y-24">
       <Intro />
+      <Products />
       <Features />
-      <Compatibility />
-      <Showcase />
     </div>
     <Footer />
   </body>
