--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,5 +8,5 @@ a,
 
 .gradient-text {
   @apply text-transparent bg-clip-text;
-  @apply bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-500;
+  @apply bg-gradient-to-br from-slate-500 via-slate-400 to-gray-900;
 }
