--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,19 +1,19 @@
 [data-theme="light"] {
-  --color-primary: theme("colors.pink.500");
+  --color-primary: theme("colors.violet.900");
   --color-secondary: theme("colors.indigo.500");
   --color-text: theme("colors.gray.900");
   --color-text-offset: theme("colors.gray.600");
-  --color-background: theme("colors.gray.50");
+  --color-background: theme("colors.white");
   --color-background-offset: theme("colors.gray.100");
   --color-border: rgb(17 24 39/0.1); /* gray.900 */
 }
 
 [data-theme="dark"] {
-  --color-primary: theme("colors.pink.400");
+  --color-primary: theme("colors.violet.500");
   --color-secondary: theme("colors.indigo.400");
   --color-text: theme("colors.gray.50");
   --color-text-offset: theme("colors.gray.400");
-  --color-background: theme("colors.gray.900");
+  --color-background: theme("colors.black");
   --color-background-offset: theme("colors.gray.800");
   --color-border: rgb(249 250 251/0.1); /* gray.50 */
 }
