--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,28 +3,26 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Just ship less" id="intro">
-  <Icon slot="eyebrow" name="logomark" class="h-32" />
+<ContentSection title="K" id="intro">
+  <!-- <Icon slot="eyebrow" name="logomark" class="h-32" /> -->
   <Fragment slot="lead">
-    Astro is a new kind of site builder for the
-    <span class="text-primary">modern</span> web.
-    <span class="text-primary">Lightning-fast</span>
-    performance meets <span class="text-primary">powerful</span> developer experience.
+    Create DAOs with <span class="text-primary">legal structures</span>. Own
+    digital assets <span class="text-primary">together</span> with protection.
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
     <a
-      href="https://docs.astro.build/"
+      href="https://docs.kali.gg/"
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
-      <Icon pack="mdi" name="telescope" class="h-8" />
+      <Icon name="clarity:scroll-solid" class="h-8" />
       <span>Read the docs</span>
     </a>
     <a
-      href="https://astro.new/"
+      href="https://app.kali.gg/"
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
       <Icon pack="mdi" name="rocket" class="h-8" />
-      <span>Try it out</span>
+      <span>Launch the App</span>
     </a>
   </div>
 </ContentSection>
