--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import Splash from "~/components/splash.astro";
 import "~/styles/index.css";
 
 const { site } = Astro;
-const image = new URL("social.jpg", site);
+const image = new URL("social.png", site);
 const description =
-  "Build fast websites, faster. Astro is a new kind of site builder for the modern web. Lightning-fast performance meets powerful developer experience.";
+  "Kali is a no-code platform for creating on-chain organizations that interface with real world. Launch internet native structures now.";
 ---
 
 <html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
@@ -18,9 +18,9 @@ const description =
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <!-- <link rel="icon" href="/favicon.svg" type="image/svg+xml" /> -->
 
-    <title>Astro Landing Page</title>
+    <title>KALI lander</title>
     <meta name="description" content={description} />
 
     <!-- fonts -->
@@ -83,7 +83,7 @@ const description =
     <div class="px-8 py-32 space-y-24">
       <Intro />
       <Products />
-      <Features />
+      <!-- <Features /> -->
     </div>
     <Footer />
   </body>
