--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,7 +3,7 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 
 const navItems = [
   { title: "Products", url: "#products" },
-  { title: "Features", url: "#features" },
+  // { title: "Features", url: "#features" },
 ];
 ---
 
@@ -35,7 +35,7 @@ const navItems = [
         class="btn sm:hidden"
         aria-label="Navigation"
       >
-       Open Nav
+        Open Nav
       </button>
       <ThemeSwitcher />
     </div>
