--- a/src/components/products.astro
+++ b/src/components/products.astro
@@ -1,11 +1,51 @@
 ---
-import ContentSection from "~/components/content-section.astro"; 
+import ContentSection from "~/components/content-section.astro";
+import { Icon } from "astro-icon";
+
+const products = [
+  {
+    title: "Kali",
+    icon: "fluent:vote-20-filled",
+    description: "Start a voting token and treasury",
+    link: "https://app.kali.gg/",
+  },
+  {
+    title: "Wrappr",
+    icon: "tabler:candy",
+    description: "Mint Legal NFTs to protect yourself",
+    link: "https://app.wrappr.wtf/",
+  },
+  {
+    title: "Keep",
+    icon: "ic:sharp-castle",
+    description: "Coming soon...",
+    link: "",
+  },
+];
 ---
 
 <ContentSection title="Products" id="products">
   <Fragment slot="lead">
-    Kali <span class="text-primary">cares</span>. Bring your own UI{" "}
+    <!-- Kali <span class="text-primary">cares</span>. Bring your own UI{" "}
     <span class="text-primary">framework</span>
-    and deploy to your favorite <span class="text-primary">platform</span>.
+    and deploy to your favorite <span class="text-primary">platform</span>. -->
+
+    <ul class="grid max-w-6xl grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+      {
+        products.map((product) => (
+          <a href={product.link} target="_blank" rel="noopenner">
+            <li class="flex flex-col items-center gap-4 p-6 border border-default bg-offset">
+              <div class="w-16 h-16 p-3 border-2 border-current rounded-full">
+                <Icon name={product.icon} />
+              </div>
+              <p class="text-xl font-extrabold text-center">{product.title}</p>
+              <p class="text-sm text-center text-offset">
+                {product.description}
+              </p>
+            </li>
+          </a>
+        ))
+      }
+    </ul>
   </Fragment>
 </ContentSection>
