--- a/src/components/products.astro
+++ b/src/components/products.astro
@@ -6,19 +6,19 @@ const products = [
   {
     title: "Kali",
     icon: "fluent:vote-20-filled",
-    description: "Start a voting token and treasury",
+    description: "Voting and Treasury Solutions",
     link: "https://app.kali.gg/",
   },
   {
     title: "Wrappr",
     icon: "tabler:candy",
-    description: "Mint Legal NFTs to protect yourself",
+    description: "Legal NFTs that Protect",
     link: "https://app.wrappr.wtf/",
   },
   {
     title: "Keep",
     icon: "ic:sharp-castle",
-    description: "Coming soon...",
+    description: "Tokenized Multi-Sig (Soon...)",
     link: "",
   },
 ];
