--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,6 +3,7 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 
 const navItems = [
   { title: "Products", url: "#products" },
+  { title: "Manifesto", url: "#manifesto" },
   // { title: "Features", url: "#features" },
 ];
 ---
