--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -6,8 +6,10 @@ import ContentSection from "~/components/content-section.astro";
 <ContentSection title="K" id="intro">
   <!-- <Icon slot="eyebrow" name="logomark" class="h-32" /> -->
   <Fragment slot="lead">
-    Create DAOs with <span class="text-primary">legal structures</span>. Own
-    digital assets <span class="text-primary">together</span> with protection.
+    <p class="max-w-xl text-2xl font-extrabold text-center">
+      Create DAOs with <span class="text-primary">legal structures</span>. Own
+      digital assets <span class="text-primary">together</span> with protection.
+    </p>
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
     <a
