--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Products from "~/components/products.astro";
-import Features from "~/components/features.astro";
+import Manifesto from "~/components/manifesto.astro";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
@@ -83,7 +83,7 @@ const description =
     <div class="px-8 py-32 space-y-24">
       <Intro />
       <Products />
-      <!-- <Features /> -->
+      <Manifesto />
     </div>
     <Footer />
   </body>
