--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -7,8 +7,8 @@ import ContentSection from "~/components/content-section.astro";
   <!-- <Icon slot="eyebrow" name="logomark" class="h-32" /> -->
   <Fragment slot="lead">
     <p class="max-w-xl text-2xl font-extrabold text-center">
-      Create DAOs with <span class="text-primary">legal structures</span>. Own
-      digital assets <span class="text-primary">together</span> with protection.
+      Create DAOs. <span class="text-primary">Mint legal structures</span>. Own
+      assets anywhere <span class="text-primary">together</span>.
     </p>
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
