--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -7,8 +7,8 @@ import ContentSection from "~/components/content-section.astro";
   <!-- <Icon slot="eyebrow" name="logomark" class="h-32" /> -->
   <Fragment slot="lead">
     <p class="max-w-xl text-2xl font-extrabold text-center">
-      Create DAOs. <span class="text-primary">Mint legal structures</span>. Own
-      assets anywhere <span class="text-primary">together</span>.
+      Deploy DAOs. <span class="text-primary">Spin up legal</span> structures. Own
+      assets anywhere <span class="text-primary">online together</span>. Ditch the paperwork.
     </p>
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
