--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -8,7 +8,7 @@ import ContentSection from "~/components/content-section.astro";
   <Fragment slot="lead">
     <p class="max-w-xl text-2xl font-extrabold text-center">
       Deploy DAOs. <span class="text-primary">Spin up legal</span> structures. Own
-      assets anywhere <span class="text-primary">online together</span>. Ditch the paperwork.
+      assets <span class="text-primary">anywhere together</span>. Ditch the paperwork.
     </p>
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
@@ -23,7 +23,7 @@ import ContentSection from "~/components/content-section.astro";
       href="https://app.kali.gg/"
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
-      <Icon pack="mdi" name="rocket" class="h-8" />
+      <Icon pack="mdi" name="lightning" class="h-8" />
       <span>Launch the App</span>
     </a>
   </div>
