--- a/src/components/products.astro
+++ b/src/components/products.astro
@@ -18,7 +18,7 @@ const products = [
   {
     title: "Keep",
     icon: "ic:sharp-castle",
-    description: "Supercharged Multi-Sig (Soon...)",
+    description: "Nifty Multi-Sig (Soon...)",
     link: "",
   },
 ];
