--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -17,13 +17,13 @@ import ContentSection from "~/components/content-section.astro";
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
       <Icon name="clarity:scroll-solid" class="h-8" />
-      <span>Read the docs</span>
+      <span>Read the Docs</span>
     </a>
     <a
       href="https://app.kali.gg/"
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
-      <Icon pack="mdi" name="lightning" class="h-8" />
+      <Icon name="bi:lightning-charge-fill" class="h-8" />
       <span>Launch the App</span>
     </a>
   </div>
