--- a/src/components/manifesto.astro
+++ b/src/components/manifesto.astro
@@ -4,11 +4,11 @@ import ContentSection from "~/components/content-section.astro";
 
 <ContentSection title="Manifesto" id="manifesto">
   <Fragment slot="lead">
-    <p class="text-md text-justify">
+    <p class="text-md text-center">
       The internet has become the starting point for any new business or idea to
       take form, and the <span class="text-primary">right to organize</span> is as natural here as anywhere.
-      Everyone deserves access and low-cost options to set terms, raise capital,
-      and hold their funds as <span class="text-primary">autonomous organizations</span> with legal backing. The <span
+      Everyone deserves low-cost options to make agreements, raise capital,
+      and collect assets as <span class="text-primary">autonomous organizations</span>. The <span
         class="text-primary"
         >law is a shield
       </span> to take productive risks, and KALI will pursue the best practices in
