--- a/src/components/manifesto.astro
+++ b/src/components/manifesto.astro
@@ -4,7 +4,7 @@ import ContentSection from "~/components/content-section.astro";
 
 <ContentSection title="Manifesto" id="manifesto">
   <Fragment slot="lead">
-    <p class="text-md text-center">
+    <p class="text-md text-center w-8/12">
       The internet has become the starting point for any new business or idea to
       take form, and the <span class="text-primary">right to organize</span> is as natural here as anywhere.
       Everyone deserves low-cost options to make agreements, raise capital,
