--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -26,9 +26,9 @@ const pngSrcset = png.map(({ srcset }) => srcset).join(",");
       <div
         class="font-black tracking-wide text-justify text-8xl gradient-text hover:animate-pulse"
       >
-        Internet
+        Net
         <br /> Native
-        <br /> Orgs.
+        <br /> Structures.
       </div>
     </h2>
   </div>
