--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -28,7 +28,7 @@ const pngSrcset = png.map(({ srcset }) => srcset).join(",");
       >
         Net
         <br /> Native
-        <br /> Structures.
+        <br /> Structs.
       </div>
     </h2>
   </div>
