--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -26,9 +26,8 @@ const pngSrcset = png.map(({ srcset }) => srcset).join(",");
       <div
         class="font-black tracking-wide text-justify text-8xl gradient-text hover:animate-pulse"
       >
-        Net
-        <br /> Native
-        <br /> Structs.
+        DAO
+        <br /> IRL
       </div>
     </h2>
   </div>
