--- a/src/components/starfield.astro
+++ b/src/components/starfield.astro
@@ -13,7 +13,7 @@
     xPrev: number;
     yPrev: number;
 
-    constructor(x = 0, y = 0, z = 0) {
+    constructor(x = 0, y = 0, z = 100) {
       this.x = x;
       this.y = y;
       this.z = z;
@@ -37,7 +37,7 @@
         this.y = Math.random() * height - height / 2;
         this.xPrev = this.x;
         this.yPrev = this.y;
-        this.z = 0;
+        this.z = 5;
       }
     }
 
@@ -77,9 +77,9 @@
       star.z = 0;
     }
 
-    ctx.translate(width / 2, height / 2);
-    ctx.fillStyle = "rgba(0, 0, 0, 0.4)";
-    ctx.strokeStyle = "white";
+    ctx.translate(width/2, height / 130);
+    ctx.fillStyle = "rgba(0, 0, 0, 1)";
+    ctx.strokeStyle = "rgba(255, 255, 255, 0.1)";
     rafId = requestAnimationFrame(frame);
   }
 
@@ -91,7 +91,7 @@
       star.draw(ctx);
     }
 
-    ctx.fillRect(-width / 10, -height / 10, width / 100, height / 100);
+    ctx.fillRect(-width / 100, -height / 100, width / 100, height / 100);
     rafId = requestAnimationFrame(frame);
   }
 </script>
