--- a/src/components/starfield.astro
+++ b/src/components/starfield.astro
@@ -4,7 +4,7 @@
 
 <script>
   const COUNT = 10000;
-  const SPEED = 0.6;
+  const SPEED = 0.1;
 
   class Star {
     x: number;
@@ -25,8 +25,8 @@
       this.xPrev = this.x;
       this.yPrev = this.y;
       this.z += speed * 0.0775;
-      this.x += this.x * (speed * 0.0225) * this.z;
-      this.y += this.y * (speed * 0.0225) * this.z;
+      this.x += this.x * (speed * getRand(10, 1001)/10) * this.z;
+      this.y += this.y * (speed * getRand(10, 1001)/10) * this.z;
       if (
         this.x > width / 2 ||
         this.x < -width / 2 ||
@@ -37,7 +37,7 @@
         this.y = Math.random() * height - height / 2;
         this.xPrev = this.x;
         this.yPrev = this.y;
-        this.z = 5;
+        this.z = getRand(0, 1);
       }
     }
 
@@ -76,12 +76,14 @@
       star.y = Math.random() * height - height / 2;
       star.z = 0;
     }
-
-    ctx.translate(width/2, height / 130);
-    ctx.fillStyle = "rgba(0, 0, 0, 1)";
-    ctx.strokeStyle = "rgba(255, 255, 255, 0.1)";
+    ctx.translate(width / 2, height / getRand(2, 11));
+  
     rafId = requestAnimationFrame(frame);
   }
+
+function getRand(min, max) {
+  return Math.floor(Math.random() * (max - min) ) + min;
+}
 
   function frame() {
     const { clientWidth: width, clientHeight: height } = container;
@@ -91,7 +93,14 @@
       star.draw(ctx);
     }
 
-    ctx.fillRect(-width / 100, -height / 100, width / 100, height / 100);
+    ctx.fillRect(-width/getRand(2, 100), -height/getRand(2, 100), width / getRand(0, 50), height / getRand(0, 50));
+    ctx.fillStyle = `rgba(${getRand(0, 255)}, ${getRand(0, 255)}, ${getRand(0, 255)}, 0.5)`;
+
+    
+    ctx.beginPath();
+    ctx.arc(-width/getRand(2, 100)*getRand(0, 1), height/getRand(10, 100)*getRand(0, 1), getRand(1, 100), 0, 2 * Math.PI);
+    ctx.fill();
+    ctx.stroke();
     rafId = requestAnimationFrame(frame);
   }
 </script>
