--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -8,7 +8,7 @@ import ContentSection from "~/components/content-section.astro";
   <Fragment slot="lead">
     <p class="max-w-xl text-2xl font-extrabold text-center">
       Deploy DAOs. <span class="text-primary">Spin up legal</span> structures. Own
-      assets <span class="text-primary">anywhere together</span>. Ditch the paperwork.
+      assets <span class="text-primary">anywhere together</span>.
     </p>
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
