--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,8 +2,9 @@
 import ThemeSwitcher from "~/components/theme-switcher.astro";
 
 const navItems = [
-  { title: "Products", url: "#products" },
   { title: "Manifesto", url: "#manifesto" },
+  { title: "Products", url: "#products" },
+  { title: "Careers", url: "#careers" },
   // { title: "Features", url: "#features" },
 ];
 ---
