--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Products from "~/components/products.astro";
 import Manifesto from "~/components/manifesto.astro";
+import Careers from "~/components/careers.astro";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
@@ -82,8 +83,9 @@ const description =
     <Splash />
     <div class="px-8 py-32 space-y-24">
       <Intro />
-      <Products />
       <Manifesto />
+      <Products />
+      <Careers />
     </div>
     <Footer />
   </body>
