--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 const navItems = [
   { title: "Manifesto", url: "#manifesto" },
   { title: "Products", url: "#products" },
-  { title: "Careers", url: "#careers" },
+  { title: "Join Us", url: "#careers" },
   // { title: "Features", url: "#features" },
 ];
 ---
