--- a/src/components/products.astro
+++ b/src/components/products.astro
@@ -13,7 +13,7 @@ const products = [
     title: "Wrappr",
     icon: "tabler:candy",
     description: "Legal NFT Minter",
-    link: "https://app.wrappr.wtf/",
+    link: "https://www.wrappr.wtf/",
   },
   {
     title: "Keep",
