--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Products from "~/components/products.astro";
-import Manifesto from "~/components/manifesto.astro";
 import Careers from "~/components/careers.astro";
 import Footer from "~/components/footer.astro";
 import Header from "~/components/header.astro";
@@ -11,7 +10,7 @@ import "~/styles/index.css";
 const { site } = Astro;
 const image = new URL("social.png", site);
 const description =
-  "Kali is a no-code platform for creating on-chain organizations that interface with real world. Launch internet native structures now.";
+  "Kali is a no-code platform for creating on-chain organizations that interface with real world. Launch internet-native structures now.";
 ---
 
 <html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
@@ -83,7 +82,6 @@ const description =
     <Splash />
     <div class="px-8 py-32 space-y-24">
       <Intro />
-      <Manifesto />
       <Products />
       <Careers />
     </div>
