--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,9 +2,8 @@
 import ThemeSwitcher from "~/components/theme-switcher.astro";
 
 const navItems = [
-  { title: "Manifesto", url: "#manifesto" },
   { title: "Products", url: "#products" },
-  { title: "Join Us", url: "#careers" },
+  { title: "Contributors", url: "#careers" },
   // { title: "Features", url: "#features" },
 ];
 ---
