--- a/src/components/careers.astro
+++ b/src/components/careers.astro
@@ -24,7 +24,7 @@ const careers = [
 ];
 ---
 
-<ContentSection title="Join Us" id="careers">
+<ContentSection title="Contribute" id="careers">
   <Fragment slot="lead">
     <ul class="max-w-6xl grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
       {
