👌  Fix link rot h/t @bestape
👌  Fix link rot h/t @bestape

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon";
 const links = [
   {
     url: "https://github.com/kalidao",
-    description: "KALI on GitHub",
+    description: "Kali on GitHub",
     icon: "fa-brands:github-alt",
   },
   {
@@ -13,7 +13,7 @@ const links = [
     icon: "fa-brands:discord",
   },
   {
-    url: "https://twitter.com/_kalidao",
+    url: "https://twitter.com/kali__gg",
     description: "Kali on Twitter",
     icon: "fa-brands:twitter",
   },
