--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -17,11 +17,6 @@ const links = [
     description: "Kali on Twitter",
     icon: "fa-brands:twitter",
   },
-  {
-    url: "https://app.dework.xyz/kali-1/app-3/view/board-l636uk17",
-    description: "Kali on Dework",
-    icon: "carbon:collaborate",
-  },
 ];
 ---
 
@@ -31,13 +26,13 @@ const links = [
       links.map((link) => (
         <li>
           <a
-            class="flex items-center justify-center w-16 h-16 p-4 border-2 border-current rounded-full"
+            class="flex items-center justify-center w-16 h-16 p-4 rounded-full"
             href={link.url}
             target="_blank"
             rel="noopenner"
           >
             <span class="sr-only">{link.description}</span>
-            <Icon class="h-full" name={link.icon} />
+            <Icon name={link.icon} />
           </a>
         </li>
       ))
