--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,8 @@
 a,
 .btn {
   @apply transition-colors duration-200;
-  @apply hover:text-secondary;
-  @apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-transparent focus:ring-secondary;
+  @apply hover:text-primary;
+  @apply focus:outline-none;
 }
 
 .gradient-text {
