🖇️  new blog link
🖇️  new blog link

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon";
 const navItems = [
   { title: "Kali", url: "https://app.kali.gg/" },
   { title: "Wrappr", url: "https://www.wrappr.wtf/" },
-  { title: "Blog", url: "https://mirror.xyz/kalico.eth" },
+  { title: "Blog", url: "https://kali.mirror.xyz/" },
   { title: "Contribute", url: "/contribute" },
   // { title: "Features", url: "#features" },
 ];
