--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -20,7 +20,9 @@ const links = [
 ];
 ---
 
-<footer class="relative flex items-center justify-center h-64">
+<footer
+  class="footer flex flex-row items-center justify-between p-4 bg-neutral text-neutral-content"
+>
   <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-4">
     {
       links.map((link) => (
@@ -38,4 +40,7 @@ const links = [
       ))
     }
   </ul>
+  <address>
+    <a href="mailto:contact@kali.gg">Contact KaliCo</a>
+  </address>
 </footer>
